<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.swatisi.team.metrowalkdc.activity.LandmarkDetailActivity"
    android:id="@+id/landmark_detail_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/landmark_detail_image_holder"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="170dp">

        <ImageView
            android:id="@+id/landmark_detail_image"
            android:contentDescription="@string/landmark_image_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/landmark_detail_text_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/landmark_detail_name"
                android:layout_width="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/landmark_detail_name"
                android:textAppearance="?android:textAppearanceLarge" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/landmark_maps_icon_description"
                android:src="@drawable/ic_directions"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startDirections"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/landmark_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            style="?android:ratingBarStyleSmall"
            android:rating="1"/>

        <TextView
            android:id="@+id/landmark_detail_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/landmark_detail_review"/>

        <TextView
            android:id="@+id/landmark_detail_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:autoLink="phone"
            android:text="@string/landmark_detail_phone"/>

        <TextView
            android:id="@+id/landmark_detail_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="true"
            android:text="@string/landmark_detail_website"/>



            <TextView
                android:id="@+id/landmark_detail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/landmark_detail_address"/>


    </LinearLayout>

</LinearLayout>