<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.swatisi.team.metrowalkdc.activity.LandmarkDetailActivity">

    <LinearLayout
        android:id="@+id/landmarkNameHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="250dp">

            <ImageView
                android:id="@+id/landmark_image"
                android:contentDescription="@string/landmark_image_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/landmark_text_holder"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/landmark_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/landmark_name"
                android:textAppearance="?android:textAppearanceLarge" />

            <RatingBar
                android:id="@+id/landmark_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="?android:ratingBarStyleSmall"
                android:rating="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Review"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Money"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Landmark Type"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="Open Till"/>


            <TextView
                android:id="@+id/landmark_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/distance_miles_away"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>